[gd_scene load_steps=22 format=3 uid="uid://jk6em5rt3j8o"]

[ext_resource type="Script" path="res://scripts/state_machines/state_machine.gd" id="1_4fqvg"]
[ext_resource type="Script" path="res://scripts/entities/enemy_base.gd" id="1_wq3kv"]
[ext_resource type="Script" path="res://scripts/state_machines/enemy_idle.gd" id="2_2eu4i"]
[ext_resource type="Texture2D" uid="uid://cpx21dvv56x5f" path="res://assets/chomper-sheet.png" id="2_ie0rn"]
[ext_resource type="Script" path="res://scripts/state_machines/enemy_wander.gd" id="3_6g1i6"]
[ext_resource type="Script" path="res://scripts/state_machines/enemy_chase.gd" id="4_ofjmg"]
[ext_resource type="Script" path="res://scripts/entities/enemy_animator.gd" id="7_fu5t4"]
[ext_resource type="Script" path="res://scripts/combat/health.gd" id="8_hrorx"]
[ext_resource type="Script" path="res://scripts/combat/hitbox.gd" id="9_yhact"]
[ext_resource type="Script" path="res://scripts/combat/hurtbox.gd" id="10_4pde3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hs7ou"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d3ues"]
atlas = ExtResource("2_ie0rn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlgh6"]
atlas = ExtResource("2_ie0rn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7vxo"]
atlas = ExtResource("2_ie0rn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv8kb"]
atlas = ExtResource("2_ie0rn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqndn"]
atlas = ExtResource("2_ie0rn")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m2yx"]
atlas = ExtResource("2_ie0rn")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm8jf"]
atlas = ExtResource("2_ie0rn")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgmdh"]
atlas = ExtResource("2_ie0rn")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_35ri5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3ues")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlgh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7vxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv8kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqndn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m2yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm8jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgmdh")
}],
"loop": true,
"name": &"Chomper_walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q7m7k"]
size = Vector2(34, 24)

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("hitbox", "health")]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_wq3kv")
hitbox = NodePath("HitBox")
health = NodePath("Health")

[node name="MovementCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hs7ou")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_35ri5")
animation = &"Chomper_walk"
autoplay = "Chomper_walk"
frame_progress = 0.504685

[node name="EnemyAnimator" type="Node" parent="." node_paths=PackedStringArray("sprite", "state_machine")]
script = ExtResource("7_fu5t4")
sprite = NodePath("")
state_machine = NodePath("../StateMachine")
chase_color = Color(0.670588, 0, 0.776471, 1)
not_chase_color = Color(0.914884, 0.50168, 1, 1)

[node name="Health" type="Node" parent="."]
script = ExtResource("8_hrorx")
max_health = 20

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 9
script = ExtResource("9_yhact")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_q7m7k")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("1_4fqvg")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("2_2eu4i")

[node name="Wander" type="Node" parent="StateMachine"]
script = ExtResource("3_6g1i6")
min_wander_time = 0.2
max_wander_time = 0.8

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("4_ofjmg")

[node name="HurtBox" type="Node" parent="."]
script = ExtResource("10_4pde3")

[node name="Timer" type="Timer" parent="HurtBox"]
wait_time = 0.1

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="area_entered" from="HitBox" to="HurtBox" method="_on_area_entered"]
[connection signal="timeout" from="HurtBox/Timer" to="HurtBox" method="_on_timer_timeout"]
